src/budgeteer/scss/statistics.scss
@import './variables';

$bottom: 60px;

.statistics {
	margin-top: 50px;

	.item {

		h1 {
			text-align: center;
			margin: 20px;
		}

	}

	.category-chart-container {
		width: 100%;
	}


	.btn {
		position: absolute;
		margin-top: 15px;
		width: 50vw;
		height: $bottom;
		background: black;
		cursor: pointer;
		bottom: 0;
	}

	.btn__left {
		left: 0;
	}

	.btn__right {
		right: 0;
	}

	.react-swipe-container > div {
		display: flex;
		align-items: center;
	}

}

